bpo-44653: Support typing.Union in parameter substitution of the union type