Lib/test/test_types.py
@@ -772,6 +772,21 @@ class UnionTests(unittest.TestCase):
         self.assertEqual((list[T] | list[S])[int, T], list[int] | list[T])
         self.assertEqual((list[T] | list[S])[int, int], list[int])
 
+    def test_union_parameter_substitution_union(self):
+        T = typing.TypeVar("T")
+        res = (int | T)[str | list]
+        self.assertEqual(res, int | str | list)
+        self.assertIsInstance(res, types.Union)
+        res = (int | T)[str | int]
+        self.assertEqual(res, int | str)
+        self.assertIsInstance(res, types.Union)
+        res = (int | T)[typing.Union[str, list]]
+        self.assertEqual(res, int | str | list)
+        self.assertIsInstance(res, types.Union)
+        res = (int | T)[typing.Union[str, int]]
+        self.assertEqual(res, int | str)
+        self.assertIsInstance(res, types.Union)
+
     def test_union_parameter_substitution_errors(self):
         T = typing.TypeVar("T")
         x = int | T
